@@ -1,4 +1,5 @@
 Changes towards version 0.7:
+- (debugging) Fixed instant-move towards the current location - SvdB
 - Fixed wrong Sa-Matra guards icons after Kohr-Ah win (bug #1001) - Alex
 - Internal ship structures and queues refactoring and cleanup - Alex
 - Fix quitting out of IP before the IP is fully set (bug #987) - Michael
